# ros_android

./: .gitignore  README.md  android.toolchain.cmake  apply_patches.sh  build_catkin_workspace.sh  build_cpp.sh  build_eigen.sh  build_example_workspace.sh  build_library.sh  build_library_with_toolchain.sh  config.sh  copy_boost.sh  create_android_mk.sh  do_docker.sh  do_everything.sh  docker_install.sh  dockerized_install.sh  get_catkin_packages.sh  get_library.sh  get_ros_stuff.sh  get_system_dependencies.sh  install.sh  ndk.rosinstall  ros.rosinstall  setup_ndk_project.sh  system_deps.rosinstall  utils.sh
docker/: .dockerignore  Dockerfile  README.md  build.sh  run.sh  runInJenkins.sh
example_workspace/src/hello_world_example_app/: CMakeLists.txt  README.md  package.xml
example_workspace/src/hello_world_example_app/app/: CMakeLists.txt  build.gradle
example_workspace/src/hello_world_example_app/app/include/ros_android/: main_thread.h
example_workspace/src/hello_world_example_app/app/src/main/: AndroidManifest.xml
example_workspace/src/hello_world_example_app/app/src/main/cpp/: CMakeLists.txt  main.cpp  main_thread.cpp
example_workspace/src/hello_world_example_app/app/src/main/java/com/ros/example/hello_ros/: MainActivity.java
example_workspace/src/hello_world_example_app/app/src/main/java/org/ros/android/example/hello_ros/: MainActivity.java
example_workspace/src/hello_world_example_app/app/src/main/jni/: com_ros_example_hello_ros_MainActivity_RosThread.cpp  com_ros_example_hello_ros_MainActivity_RosThread.h  org_ros_android_example_hello_ros_MainActivity_RosThread.cpp  org_ros_android_example_hello_ros_MainActivity_RosThread.h
example_workspace/src/hello_world_example_app/app/src/main/res/layout/: logging.xml
example_workspace/src/hello_world_example_app/app/src/main/res/values/: strings.xml
example_workspace/src/image_transport_sample_app/: CMakeLists.txt  package.xml
example_workspace/src/image_transport_sample_app/jni/: CMakeLists.txt  build.gradle
example_workspace/src/image_transport_sample_app/jni/src/main/: AndroidManifest.xml
example_workspace/src/image_transport_sample_app/jni/src/main/cpp/: image_transport_plugin_test.cpp
example_workspace/src/image_transport_sample_app/jni/src/main/res/values/: strings.xml
example_workspace/src/move_base_app/: CMakeLists.txt  package.xml
example_workspace/src/move_base_app/jni/: CMakeLists.txt  build.gradle
example_workspace/src/move_base_app/jni/src/main/: AndroidManifest.xml
example_workspace/src/move_base_app/jni/src/main/cpp/: test_move_base.cpp
example_workspace/src/move_base_app/jni/src/main/res/values/: strings.xml
example_workspace/src/nodelet_sample_app/: CMakeLists.txt  package.xml
example_workspace/src/nodelet_sample_app/jni/: AndroidManifest.xml  CMakeLists.txt  build.gradle
example_workspace/src/nodelet_sample_app/jni/src/main/: AndroidManifest.xml
example_workspace/src/nodelet_sample_app/jni/src/main/cpp/: test_nodelet.cpp
example_workspace/src/nodelet_sample_app/jni/src/main/res/values/: strings.xml
example_workspace/src/pluginlib_sample_app/: CMakeLists.txt  package.xml  settings.gradle
example_workspace/src/pluginlib_sample_app/jni/: CMakeLists.txt  build.gradle
example_workspace/src/pluginlib_sample_app/jni/src/main/: AndroidManifest.xml
example_workspace/src/pluginlib_sample_app/jni/src/main/cpp/: polygon_loader.cpp
example_workspace/src/pluginlib_sample_app/jni/src/main/res/values/: strings.xml
files/: Android.mk.move_base
files/hello_world_example_app/: README.md
files/hello_world_example_app/app/: build.gradle
files/hello_world_example_app/app/src/main/cpp/: CMakeLists.txt  main.cpp
files/hello_world_example_app/app/src/main/res/values/: strings.xml
files/hello_world_example_app_prebuild/app/: build.gradle
files/hello_world_example_app_prebuild/app/src/main/: AndroidManifest.xml
files/hello_world_example_app_prebuild/hello_world_example_app/app/: build.gradle
files/hello_world_example_app_prebuild/hello_world_example_app/app/src/main/cpp/: main.cpp
files/pluginlib_helper/: plugin_collect.py  pluginlib_helper.py
patches/: actionlib.patch  android.toolchain.cmake.patch  assimp.patch  bondcpp.patch  boost.patch  bullet.patch  camera_calibration_parsers.patch  camera_info_manager.patch  catkin.patch  class_loader.patch  collada_dom.patch  console_bridge.patch  cv_bridge.patch  depth_image_proc.patch  image_proc.patch  image_publisher.patch  image_rotate.patch  image_view.patch  libtiff.patch  lz4.patch  map_server.patch  move_base.patch  octomap.patch  octomap_ros.patch  opencv.patch  orocos_kdl.patch  pcl-1.8.1.patch  pcl_ros.patch  pcrecpp.patch  pluginlib.patch  poco.patch  python_orocos_kdl.patch  robot_state_publisher.patch  rosbag_storage.patch  rosconsole.patch  rospack.patch  tf2_py.patch  theora_image_transport.patch  urdf.patch  urdfdom.patch  (+3 more)
patches/graveyard/: qhull.patch
patches/source_patches/: bfl.patch  pluginlib.patch  yaml-cpp.patch
scripts/: apply_patches.sh  build_catkin_workspace.sh  build_library.sh  build_library_with_cmake.sh  build_library_with_toolchain.sh  config.sh  copy_boost.sh  get_catkin_packages.sh  get_system_dependencies.sh  utils.sh
scripts/pluginlib_helper/: plugin_collect.py  pluginlib_helper.cpp
scripts/sources_setup/: get_library.sh  get_patched_ros_workspace.sh  get_ros_stuff.sh  get_system_libraries.sh
scripts/util/: apply_patch.sh  basic_utils.sh  cmake_build.sh  config.sh  copy_boost.sh  create_android_mk.sh  download_utils.sh  setup_ndk_project.sh  utils.sh
