<?xml version="1.0"?>
<package format="2">
  <name>hello_ros</name>
  <version>0.0.1</version>
  <description>Hello word example with ros on android</description>

  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>

  <license>Apache 2.0 License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>rosjava_build_tools</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosconsole</depend>

</package>
