<?xml version="1.0"?>
<package format="2">
  <name>image_transport_sample</name>
  <version>0.0.1</version>
  <description>Image transport sample with ros on android</description>

  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosconsole</depend>
  <depend>pluginlib</depend>
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>
  <depend>theora_image_transport</depend>
  <depend>compressed_depth_image_transport</depend>
  

</package>
