<?xml version="1.0"?>
<package format="2">
  <name>move_base_app</name>
  <version>0.0.1</version>
  <description>Move base app with ros android</description>

  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>

  <license>Apache 2.0 License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>move_base</depend>

</package>
