<?xml version="1.0"?>
<package format="2">
  <name>nodelet_example</name>
  <version>0.0.1</version>
  <description>Nodelet example app with ros on android</description>

  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>

  <license>Apache 2.0 License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosconsole</depend>
  <depend>nodelet</depend>

</package>
